@@ -142,7 +142,10 @@ fn ok() {
     let parser = gen_parser();
     let mut deserializer = serde_json::Deserializer::from_str(VAL);
     let parsed_value: serde_json::Value = serde_json::from_str(VAL).unwrap();
-    let parsed: MessyJsonValueContainer = parser.builder().deserialize(&mut deserializer).unwrap();
+    let parsed: MessyJsonValueContainer = parser
+        .builder(false)
+        .deserialize(&mut deserializer)
+        .unwrap();
 
     assert_eq!(
         parsed.inner().eq(&parsed_value),
@@ -194,7 +197,10 @@ fn mismatch_string() {
 	}
 	"#;
     let parsed_value: serde_json::Value = serde_json::from_str(bogus_value).unwrap();
-    let parsed: MessyJsonValueContainer = parser.builder().deserialize(&mut deserializer).unwrap();
+    let parsed: MessyJsonValueContainer = parser
+        .builder(false)
+        .deserialize(&mut deserializer)
+        .unwrap();
     assert_eq!(
         parsed.inner().eq(&parsed_value),
         false,
@@ -245,7 +251,10 @@ fn mismatch_number() {
 	}
 	"#;
     let parsed_value: serde_json::Value = serde_json::from_str(bogus_value).unwrap();
-    let parsed: MessyJsonValueContainer = parser.builder().deserialize(&mut deserializer).unwrap();
+    let parsed: MessyJsonValueContainer = parser
+        .builder(false)
+        .deserialize(&mut deserializer)
+        .unwrap();
     assert_eq!(
         parsed.inner().eq(&parsed_value),
         false,
@@ -296,7 +305,10 @@ fn mismatch_bool() {
 	}
 	"#;
     let parsed_value: serde_json::Value = serde_json::from_str(bogus_value).unwrap();
-    let parsed: MessyJsonValueContainer = parser.builder().deserialize(&mut deserializer).unwrap();
+    let parsed: MessyJsonValueContainer = parser
+        .builder(false)
+        .deserialize(&mut deserializer)
+        .unwrap();
     assert_eq!(
         parsed.inner().eq(&parsed_value),
         false,
@@ -347,7 +359,10 @@ fn mismatch_array() {
 	}
 	"#;
     let parsed_value: serde_json::Value = serde_json::from_str(bogus_value).unwrap();
-    let parsed: MessyJsonValueContainer = parser.builder().deserialize(&mut deserializer).unwrap();
+    let parsed: MessyJsonValueContainer = parser
+        .builder(false)
+        .deserialize(&mut deserializer)
+        .unwrap();
     assert_eq!(
         parsed.inner().eq(&parsed_value),
         false,
@@ -398,7 +413,10 @@ fn mismatch_obj() {
 	}
 	"#;
     let parsed_value: serde_json::Value = serde_json::from_str(bogus_value).unwrap();
-    let parsed: MessyJsonValueContainer = parser.builder().deserialize(&mut deserializer).unwrap();
+    let parsed: MessyJsonValueContainer = parser
+        .builder(false)
+        .deserialize(&mut deserializer)
+        .unwrap();
     assert_eq!(
         parsed.inner().eq(&parsed_value),
         false,
@@ -449,7 +467,10 @@ fn mismatch_obj_nested() {
 	}
 	"#;
     let parsed_value: serde_json::Value = serde_json::from_str(bogus_value).unwrap();
-    let parsed: MessyJsonValueContainer = parser.builder().deserialize(&mut deserializer).unwrap();
+    let parsed: MessyJsonValueContainer = parser
+        .builder(false)
+        .deserialize(&mut deserializer)
+        .unwrap();
     assert_eq!(
         parsed.inner().eq(&parsed_value),
         false,
