@@ -16,7 +16,10 @@ fn null() {
 	"#;
 
     let mut deserializer = serde_json::Deserializer::from_str(value);
-    let parsed = schema.builder().deserialize(&mut deserializer).unwrap();
+    let parsed = schema
+        .builder(false)
+        .deserialize(&mut deserializer)
+        .unwrap();
     match parsed.inner() {
         MessyJsonValue::Obj(x) => assert_eq!(
             matches!(x.get("hello").unwrap(), MessyJsonValue::Null(x, _y) if matches!(x, MessyJsonNullType::Null)),
@@ -41,7 +44,10 @@ fn absent() {
 	"#;
 
     let mut deserializer = serde_json::Deserializer::from_str(value);
-    let parsed = schema.builder().deserialize(&mut deserializer).unwrap();
+    let parsed = schema
+        .builder(false)
+        .deserialize(&mut deserializer)
+        .unwrap();
     match parsed.inner() {
         MessyJsonValue::Obj(x) => assert_eq!(
             matches!(x.get("hello").unwrap(), MessyJsonValue::Null(x, _y) if matches!(x, MessyJsonNullType::Absent)),
