@@ -2,7 +2,10 @@ use super::*;
 
 fn run_test<'a>(schema: &'a MessyJson<'a>, value: &'a str, expected: MessyJsonValue<'a>) {
     let mut deserializer = serde_json::Deserializer::from_str(value);
-    let parsed: MessyJsonValueContainer = schema.builder().deserialize(&mut deserializer).unwrap();
+    let parsed: MessyJsonValueContainer = schema
+        .builder(false)
+        .deserialize(&mut deserializer)
+        .unwrap();
     assert_eq!(
         matches!(parsed.inner(), MessyJsonValue::Obj(_)),
         true,
@@ -101,7 +104,7 @@ fn wrong_key() {
 
     let mut deserializer = serde_json::Deserializer::from_str(value);
     schema
-        .builder()
+        .builder(false)
         .deserialize(&mut deserializer)
         .expect_err("to fail because of wrong key");
 }
@@ -131,7 +134,7 @@ fn wrong_value_type() {
 
     let mut deserializer = serde_json::Deserializer::from_str(value);
     schema
-        .builder()
+        .builder(false)
         .deserialize(&mut deserializer)
         .expect_err("to fail because of wrong value");
 }
