@@ -12,7 +12,10 @@ fn simple() {
 	"#;
 
     let mut deserializer = serde_json::Deserializer::from_str(value);
-    let parsed: MessyJsonValueContainer = schema.builder().deserialize(&mut deserializer).unwrap();
+    let parsed: MessyJsonValueContainer = schema
+        .builder(false)
+        .deserialize(&mut deserializer)
+        .unwrap();
     assert_eq!(
         matches!(parsed.inner(), MessyJsonValue::Array(_)),
         true,
